# hack3shcool_back-end

./: .gitignore  pyproject.toml
app/: main.py
app/routes/: authentication.py  cours.py  dashboard.py
app/security/: security.py
app/services/: authentication.py  cours.py  dashboard.py
app/shemas/: authentication.py  cours.py  dashboard.py
doc_project/: Authentification.txt  Cours.txt  dashboard.txt
prisma/: schema.prisma
prisma/migrations/20250613200519_school/: migration.sql
